requirements matching for client
